# docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /
 definitions:
   ai.AiCHat:
     properties:
@@ -227,8 +228,11 @@ definitions:
       soldier_id:
         type: string
     type: object
+host: localhost:8080
 info:
   contact: {}
+  description: Millitary service
+  version: "1.0"
 paths:
   /ai/chat:
     post:
@@ -253,6 +257,8 @@ paths:
           description: Error while creating
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: CHAT
       tags:
       - AI
@@ -278,6 +284,8 @@ paths:
           description: Error while creating
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: GetHistory
       tags:
       - AI
@@ -304,6 +312,9 @@ paths:
           description: Error while creating
           schema:
             type: string
+      security:
+      - BearerAuth: []
+      - BearerAuth: []
       summary: Create Bullet
       tags:
       - Bullet
@@ -329,6 +340,8 @@ paths:
           description: Error while deleting
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Delete Bullet
       tags:
       - Bullet
@@ -354,6 +367,8 @@ paths:
           description: Error while getting
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get Bullet
       tags:
       - Bullet
@@ -383,6 +398,8 @@ paths:
           description: Error while getting all
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get All Bullets
       tags:
       - Bullet
@@ -414,6 +431,9 @@ paths:
           description: Error while updating
           schema:
             type: string
+      security:
+      - BearerAuth: []
+      - BearerAuth: []
       summary: Update Bullet
       tags:
       - Bullet
@@ -440,6 +460,8 @@ paths:
           description: Error while creating
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Create Commander
       tags:
       - Commander
@@ -465,6 +487,8 @@ paths:
           description: Error while deleting
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Delete Commander
       tags:
       - Commander
@@ -490,6 +514,8 @@ paths:
           description: Error while getting
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get Commander
       tags:
       - Commander
@@ -516,6 +542,8 @@ paths:
           description: Error while getting all
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get All Commanders
       tags:
       - Commander
@@ -547,6 +575,8 @@ paths:
           description: Error while updating
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Update Commander
       tags:
       - Commander
@@ -573,6 +603,8 @@ paths:
           description: Error while creating
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Create Department
       tags:
       - Department
@@ -598,6 +630,8 @@ paths:
           description: Error while deleting
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Delete Department
       tags:
       - Department
@@ -623,6 +657,8 @@ paths:
           description: Error while getting
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get Department
       tags:
       - Department
@@ -646,6 +682,8 @@ paths:
           description: Error while getting all
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get All Departments
       tags:
       - Department
@@ -677,6 +715,8 @@ paths:
           description: Error while updating
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Update Department
       tags:
       - Department
@@ -703,6 +743,8 @@ paths:
           description: Error while creating
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Create Fuel
       tags:
       - Fuel
@@ -728,6 +770,8 @@ paths:
           description: Error while deleting
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Delete Fuel
       tags:
       - Fuel
@@ -753,6 +797,8 @@ paths:
           description: Error while getting
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get Fuel
       tags:
       - Fuel
@@ -779,6 +825,8 @@ paths:
           description: Error while getting all
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get All Fuels
       tags:
       - Fuel
@@ -810,6 +858,8 @@ paths:
           description: Error while updating
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Update Fuel
       tags:
       - Fuel
@@ -836,6 +886,8 @@ paths:
           description: Error while creating
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Create Group
       tags:
       - Group
@@ -861,6 +913,8 @@ paths:
           description: Error while deleting
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Delete Group
       tags:
       - Group
@@ -886,6 +940,8 @@ paths:
           description: Error while getting
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get Group
       tags:
       - Group
@@ -909,6 +965,8 @@ paths:
           description: Error while getting all
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get All Groups
       tags:
       - Group
@@ -940,6 +998,8 @@ paths:
           description: Error while updating
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Update Group
       tags:
       - Group
@@ -966,6 +1026,8 @@ paths:
           description: Error while creating
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Create Soldier
       tags:
       - Soldier
@@ -1007,6 +1069,8 @@ paths:
           description: Error while getting all
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get All Dashbord
       tags:
       - Dashbord
@@ -1032,6 +1096,8 @@ paths:
           description: Error while deleting
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Delete Soldier
       tags:
       - Soldier
@@ -1057,6 +1123,8 @@ paths:
           description: Error while getting
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get Soldier
       tags:
       - Soldier
@@ -1086,6 +1154,8 @@ paths:
           description: Error while getting all
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get All Soldiers
       tags:
       - Soldier
@@ -1117,6 +1187,8 @@ paths:
           description: Error while updating
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Update Soldier
       tags:
       - Soldier
@@ -1143,6 +1215,8 @@ paths:
           description: Error while using bullet
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Use Bullet
       tags:
       - Soldier
@@ -1169,6 +1243,8 @@ paths:
           description: Error while using fuel
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Use Fuel
       tags:
       - Soldier
@@ -1195,6 +1271,8 @@ paths:
           description: Error while creating
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Create Technique
       tags:
       - Technique
@@ -1220,6 +1298,8 @@ paths:
           description: Error while deleting
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Delete Technique
       tags:
       - Technique
@@ -1245,6 +1325,8 @@ paths:
           description: Error while getting
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get Technique
       tags:
       - Technique
@@ -1274,6 +1356,8 @@ paths:
           description: Error while getting all
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get All Techniques
       tags:
       - Technique
@@ -1305,7 +1389,14 @@ paths:
           description: Error while updating
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Update Technique
       tags:
       - Technique
+securityDefinitions:
+  BearerAuth:
+    in: header
+    name: Authourization
+    type: apiKey
 swagger: "2.0"
